fix(mapsmall): change z-index of map small to enable correct rendering of the pop up

--- a/client/src/components/PopUp/popUp.css
+++ b/client/src/components/PopUp/popUp.css
@@ -31,6 +31,7 @@
   border-radius: 25px;
   background-color: white;
   width: 90vw;
+  z-index: 1;
 }
 
 .pu__mainContainer {
